Fix styles when the navigation is collapsed

--- a/src/layouts/Main/mainLayout.module.scss
+++ b/src/layouts/Main/mainLayout.module.scss
@@ -15,6 +15,10 @@
   flex-grow: 1;
   padding-top: 6.3rem;
 
+  &--collapsed {
+    padding-top: 6.3rem;
+  }
+
   @include for-tablet-landscape-up {
     display: flex;
     padding-left: 25.4rem;
@@ -27,6 +31,7 @@
       flex-direction: column;
       padding-left: 11.2rem;
       transition: $transition;
+      padding-top: 0;
     }
 
     &--cartExpanded {
